# file_processor

./: .gitignore  README.md  docker-compose.yml  file_processing.Dockerfile  pyproject.toml
.github/workflows/: main.yml
file_processing/: manage.py  run_app.sh  setup.cfg
file_processing/api/: apps.py  constants.py  mixins.py  serializers.py  tasks.py  urls.py  views.py
file_processing/file/: admin.py  apps.py  models.py  tasks.py
file_processing/file/migrations/: 0001_initial.py
file_processing/file_processing/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
file_processing/files/: File1_IJESKgi
file_processing/tests/: test_api_tasks.py  test_api_views.py  test_file_models.py
infra/: .env.example  celery_worker.Dockerfile  file_processing.Dockerfile  nginx.conf  run_app.sh
